--- a/src/Notes/ComputerScience/CG/RTGW/04/02_02_orthographic.html
+++ b/src/Notes/ComputerScience/CG/RTGW/04/02_02_orthographic.html
@@ -58,6 +58,9 @@
 
 </li></ul>
 </li><li>
+<a href="02_02_orthographic.html#Note">Note</a>
+
+</li><li>
 <a href="02_02_orthographic.html#References">References</a>
 
 </li></ul>
@@ -341,6 +344,12 @@ z \\
 1 \\
 \end{bmatrix}
 \end{align}
+
+<div id="Orthographic Matrix-Note"><h2 id="Note" class="header"><a href="#Orthographic Matrix-Note">Note</a></h2></div>
+
+<p>
+This section is kinda important, up until now we have define this projection matrix on what we call <a href="https://en.wikipedia.org/wiki/Row-_and_column-major_order">row-major order</a>. However, WebGL expects us to use matrices defined on <a href="https://en.wikipedia.org/wiki/Row-_and_column-major_order">column-major order</a>. See <a href="01_transformations.html#Transposing%20Transformation%20or%20Projection%20Matrices">Transposing Transformation or Projection Matrices</a> on how to correctly defined these matrices.
+</p>
 
 <div id="Orthographic Matrix-References"><h2 id="References" class="header"><a href="#Orthographic Matrix-References">References</a></h2></div>
 
