[AGAA] Start generating notes: 01_01, 01_02, 01_03 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -42,6 +42,17 @@
 <li>
 Linear Functions, Equations and Inequalities
 
+<ol>
+<li>
+<a href="01_01.html">Real Numbers and the Rectangular Coordinate System</a>
+
+</li><li>
+<a href="01_02.html">Introduction to Relations and Functions</a>
+
+</li><li>
+<a href="01_03.html">Linear Functions</a>
+
+</li></ol>
 </li><li>
 Analysis of Graphs of Functions
 
