--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -52,6 +52,15 @@ Linear Functions, Equations and Inequalities
 </li><li>
 <a href="01_03.html">Linear Functions</a>
 
+</li><li>
+<a href="01_04.html">Equations of Lines and Linear Models</a>
+
+</li><li>
+<a href="01_05.html">Linear Equations and Inequalities</a>
+
+</li><li>
+<a href="01_06.html">Applications of Linear Functions</a>
+
 </li></ol>
 </li><li>
 Analysis of Graphs of Functions
