--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -65,6 +65,20 @@ Linear Functions, Equations and Inequalities
 </li><li>
 Analysis of Graphs of Functions
 
+<ol>
+<li>
+<a href="02_01.html">Graphs of Basic Functions and Relations: Symmetry</a>
+
+</li><li>
+<a href="02_02.html">Vertical and Horizontal Shifts of Graphs</a>
+
+</li><li>
+<a href="02_03.html">Stretching, Shrinking and Reflecting Graphs</a>
+
+</li><li>
+<a href="02_04.html">Absolute Value Functions</a>
+
+</li></ol>
 </li><li>
 Polynomial Functions
 
