[AGAA] 11_04: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -219,6 +219,9 @@ Further Topics in Algebra
 </li><li>
 <a href="11_03.html">Geometric Sequences and Series</a>
 
+</li><li>
+<a href="11_04.html">Couting Theory</a>
+
 </li></ol>
 </li></ol>
 </div>
