[AGAA] 11_04: fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/11_04.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/11_04.html
@@ -3,7 +3,7 @@
     <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
-    <title>Couting Theory</title>
+    <title>Counting Theory</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -34,7 +34,7 @@
 <a href="index.html">Back</a>
 </p>
 
-<div id="Couting Theory"><h1 id="Couting Theory" class="header"><a href="#Couting Theory">Couting Theory</a></h1></div>
+<div id="Counting Theory"><h1 id="Counting Theory" class="header"><a href="#Counting Theory">Counting Theory</a></h1></div>
 
 <hr>
 
@@ -55,10 +55,10 @@
 </li></ul>
 <hr>
 
-<div id="Couting Theory-Fundamental Principle of Counting"><h2 id="Fundamental Principle of Counting" class="header"><a href="#Couting Theory-Fundamental Principle of Counting">Fundamental Principle of Counting</a></h2></div>
+<div id="Counting Theory-Fundamental Principle of Counting"><h2 id="Fundamental Principle of Counting" class="header"><a href="#Counting Theory-Fundamental Principle of Counting">Fundamental Principle of Counting</a></h2></div>
 
 <p>
-Two events are <span id="Couting Theory-Fundamental Principle of Counting-independent events"></span><strong id="independent events">independent events</strong> if neither influences the outcome of the other.
+Two events are <span id="Counting Theory-Fundamental Principle of Counting-independent events"></span><strong id="independent events">independent events</strong> if neither influences the outcome of the other.
 </p>
 
 <p>
@@ -88,24 +88,24 @@ m_1 \times m_2 \times \cdots \times m_n
 different ways for all \(n\) events to occur.
 </p>
 
-<div id="Couting Theory-n-Factorial"><h2 id="n-Factorial" class="header"><a href="#Couting Theory-n-Factorial">n-Factorial</a></h2></div>
+<div id="Counting Theory-n-Factorial"><h2 id="n-Factorial" class="header"><a href="#Counting Theory-n-Factorial">n-Factorial</a></h2></div>
 
 <p>
 For any positive integer \(n\):
 </p>
 
-\begin{aling}
+\begin{align}
 n! = n(n-1)(n-2)\cdots (3)(2)(1)
-\end{aling}
+\end{align}
 
 <p>
 By definition \(0! = 1\).
 </p>
 
-<div id="Couting Theory-Permutations"><h2 id="Permutations" class="header"><a href="#Couting Theory-Permutations">Permutations</a></h2></div>
+<div id="Counting Theory-Permutations"><h2 id="Permutations" class="header"><a href="#Counting Theory-Permutations">Permutations</a></h2></div>
 
 <p>
-A <span id="Couting Theory-Permutations-permutation"></span><strong id="permutation">permutation</strong> of \(n\) elements taken \(r\) at a time if one of the possible orderings of \(r\) elements from a set of \(n\) elements. The number of permutations of \(r\) elements on a set of \(n\) elements its denoted by \(P(n, r)\) and is calculated as follows:
+A <span id="Counting Theory-Permutations-permutation"></span><strong id="permutation">permutation</strong> of \(n\) elements taken \(r\) at a time if one of the possible orderings of \(r\) elements from a set of \(n\) elements. The number of permutations of \(r\) elements on a set of \(n\) elements its denoted by \(P(n, r)\) and is calculated as follows:
 </p>
 
 \begin{align}
@@ -124,10 +124,10 @@ P(n, r) = n(n - 1)(n - 2)(n - r + 1)
 Altenative notations for \(P(n, r)\) are \(P^n_r\) and \(_{n}P_{r}\).
 </p>
 
-<div id="Couting Theory-Combinations"><h2 id="Combinations" class="header"><a href="#Couting Theory-Combinations">Combinations</a></h2></div>
+<div id="Counting Theory-Combinations"><h2 id="Combinations" class="header"><a href="#Counting Theory-Combinations">Combinations</a></h2></div>
 
 <p>
-A subset of items selected without regard to order is called a <span id="Couting Theory-Combinations-combination"></span><strong id="combination">combination</strong>.
+A subset of items selected without regard to order is called a <span id="Counting Theory-Combinations-combination"></span><strong id="combination">combination</strong>.
 </p>
 
 <p>
