--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -220,7 +220,7 @@ Further Topics in Algebra
 <a href="11_03.html">Geometric Sequences and Series</a>
 
 </li><li>
-<a href="11_04.html">Couting Theory</a>
+<a href="11_04.html">Counting Theory</a>
 
 </li></ol>
 </li></ol>
