[AGAA] 11_04: little fix [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/11_04.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/11_04.html
@@ -66,14 +66,14 @@ If \(n\) independent events take place, with:
 </p>
 
 \begin{align}
-\begin{bmatrix}
+\begin{matrix}
 m_1 \text{ ways for event } 1 \text{ to occur}, \\
 m_2 \text{ ways for event } 2 \text{ to occur}, \\
 \cdot \\
 \cdot \\
 \cdot \\
 m_n \text{ ways for event } n \text{ to occur}, \\
-\end{bmatrix}
+\end{matrix}
 \end{align}
 
 <p>
