[AGAA] Continue notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -78,10 +78,24 @@ Analysis of Graphs of Functions
 </li><li>
 <a href="02_04.html">Absolute Value Functions</a>
 
+</li><li>
+<a href="02_05.html">Piecewise-Defined Functions</a>
+
+</li><li>
+<a href="02_06.html">Opertions and Composition</a>
+
 </li></ol>
 </li><li>
 Polynomial Functions
 
+<ol>
+<li>
+<a href="03_01.html">Complex Numbers</a>
+
+</li><li>
+<a href="03_02.html">Quadratic Functions and Graphs</a>
+
+</li></ol>
 </li><li>
 Rational, Power and Root Functions
 
