[AGAA] 11_05: start notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -236,6 +236,9 @@ Further Topics in Algebra
 </li><li>
 <a href="11_04.html">Counting Theory</a>
 
+</li><li>
+<a href="11_05.html">The Binomial Theorem</a>
+
 </li></ol>
 </li></ol>
 </div>
