[AGAA] Continue filling-in notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -95,6 +95,12 @@ Polynomial Functions
 </li><li>
 <a href="03_02.html">Quadratic Functions and Graphs</a>
 
+</li><li>
+<a href="03_03.html">Quadratic Equations and Inequalities</a>
+
+</li><li>
+<a href="03_05.html">High-Degree Polynomial Functions and Graphs</a>
+
 </li></ol>
 </li><li>
 Rational, Power and Root Functions
