--- a/src/Notes/Math/Pre-Calculus/AGAA/03_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/03_02.html
@@ -49,6 +49,12 @@
 </li><li>
 <a href="03_02.html#Graphs%20of%20Quadratic%20Functions">Graphs of Quadratic Functions</a>
 
+</li><li>
+<a href="03_02.html#Vertex%20Formula">Vertex Formula</a>
+
+</li><li>
+<a href="03_02.html#Extreme%20Values">Extreme Values</a>
+
 </li></ul>
 <hr>
 
@@ -120,11 +126,86 @@ Multiply each side by \(a\).
 P(x) = a(x + \frac{b}{a})^2 + c - \frac{b^2}{4a}
 \end{align}
 \begin{align}
-= a(x + \frac{b}{a})^2 - \frac{b^2 - 4ac}{4a}
+= a(x + \frac{b}{a})^2 + \frac{4ac - b^2}{4a}
 \end{align}
 
 </li></ul>
 <div id="Quadratic Functions and Graphs-Graphs of Quadratic Functions"><h2 id="Graphs of Quadratic Functions" class="header"><a href="#Quadratic Functions and Graphs-Graphs of Quadratic Functions">Graphs of Quadratic Functions</a></h2></div>
+
+<p>
+Recall from <a href="01_03.html#Intercepts">Intercepts</a> that the \(y\)-intercept of the graph of an equation is the point that has \(x\)-coordinate 0. For a parabola given in the form \(P(x) = ax^2 + bx + c\), the \(y\)-value of the \(y\)-intercept is \(P(0) = c\).
+</p>
+
+<p>
+Consider the graph of \(P(x) = a(x - h)^2 + k (a \neq 0)\), then:
+</p>
+
+<ul>
+<li>
+The graph is a parabola with vertex \((h, k)\) and vertical line \(x = h\) as its axis of symmetry.
+
+</li><li>
+The graph opens upward if \(a &gt; 0\) and downward if \(a &lt; 0\).
+
+</li><li>
+The graph is wider than the graph of \(y = x^2\) if \(0 &lt; |a| &lt; 1\) and narrower if \(|a| &gt; 1\).
+
+</li></ul>
+<div id="Quadratic Functions and Graphs-Vertex Formula"><h2 id="Vertex Formula" class="header"><a href="#Quadratic Functions and Graphs-Vertex Formula">Vertex Formula</a></h2></div>
+
+<p>
+We can determine the coordinates of the vertex of the graph of a quadratic function by completing the square, as shown earlier. Given the standard form of the quadratic function \(P(x) = ax^2 + bx + c, where a \neq 0\), then:
+</p>
+
+\begin{align}
+P(x) = a\left(x - \left(-\frac{b}{a}\right)\right)^2 + + \frac{4ac - b^2}{4a}
+\end{align}
+
+<p>
+This equation shows that the vertex \((h, k)\) can be expressed in terms of \(a, b\) and \(c\), such that:
+</p>
+
+\begin{align}
+h = \left(-\frac{b}{a}\right)
+\end{align}
+
+<p>
+and 
+</p>
+
+\begin{align}
+k = \frac{4ac - b^2}{4a}
+\end{align}
+
+<div id="Quadratic Functions and Graphs-Extreme Values"><h2 id="Extreme Values" class="header"><a href="#Quadratic Functions and Graphs-Extreme Values">Extreme Values</a></h2></div>
+
+<p>
+The vertex of the graph of
+</p>
+
+\begin{align}
+P(x) = ax^2 + bx + c
+\end{align}
+
+<p>
+is the lowest point on the graph of the function if \(a &gt; 0\) and the highest point if \(a &lt; 0\). Such points are called <span id="Quadratic Functions and Graphs-Extreme Values-extreme points"></span><strong id="extreme points">extreme points</strong> (also <span id="Quadratic Functions and Graphs-Extreme Values-extrema"></span><strong id="extrema">extrema</strong>; singular, <span id="Quadratic Functions and Graphs-Extreme Values-extremum"></span><strong id="extremum">extremum</strong>).
+</p>
+
+<ol>
+<li>
+If \(a &gt; 0\) then the vertex \((h, k)\) is called the <span id="Quadratic Functions and Graphs-Extreme Values-minimum point"></span><strong id="minimum point">minimum point</strong> of the graph. The <span id="Quadratic Functions and Graphs-Extreme Values-minimum value"></span><strong id="minimum value">minimum value</strong> of the function is \(P(h) = k\).
+
+</li><li>
+If \(a &lt; 0\) then the vertex \((h, k)\) is called the <span id="Quadratic Functions and Graphs-Extreme Values-maximum point"></span><strong id="maximum point">maximum point</strong> of the graph. The <span id="Quadratic Functions and Graphs-Extreme Values-maximum value"></span><strong id="maximum value">maximum value</strong> of the function is \(P(h) = k\).
+
+</li></ol>
+<p>
+FIGURE 14 illustrates these ideas.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/extreme_values.png" alt="Extreme Values" style="width:600px;">
+</p>
 </div>
   
 
