[AGAA] 11_06: notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -245,6 +245,9 @@ Further Topics in Algebra
 </li><li>
 <a href="11_05.html">The Binomial Theorem</a>
 
+</li><li>
+<a href="11_06.html">Mathematical Induction</a>
+
 </li></ol>
 </li></ol>
 </div>
